--- a/index.html
+++ b/index.html
@@ -37,4 +37,50 @@
             <a href="#"><i class="fas fa-shopping-cart"></i>cart</a>
         </div>
     </header>
+
+
+
+    <section>
+        <div class="cate-row">
+            <div class="cate-col">
+                <img src="./images/grocery.webp">
+                <h5>Top offers</h5>
+            </div>
+            <div class="cate-col">
+                <img src="./images/mobile.webp">
+                <h5>Top offers</h5>
+            </div>
+            <div class="cate-col">
+                <img src="./images/fashion.webp">
+                <h5>Top offers</h5>
+            </div>
+            <div class="cate-col">
+                <img src="./images/home.webp">
+                <h5>Top offers</h5>
+            </div>
+            <div class="cate-col">
+                <img src="./images/app.webp">
+                <h5>Top offers</h5>
+            </div>
+            <div class="cate-col">
+                <img src="./images/travel.webp">
+                <h5>Top offers</h5>
+            </div>
+            <div class="cate-col">
+                <img src="./images/topoffers.webp">
+                <h5>Top offers</h5>
+            </div>
+            <div class="cate-col">
+                <img src="./images/beauty.webp">
+                <h5>Top offers</h5>
+            </div>
+            <div class="cate-col">
+                <img src="./images/two.webp">
+                <h5>Top offers</h5>
+            </div>
+
+        </div>
+    </section>
+
+    
 </body>
