--- a/index.html
+++ b/index.html
@@ -83,4 +83,13 @@
     </section>
 
     
+    <section>
+        <div class="banner">
+            <div class="slider">
+                <img src="./images/ba.webp">
+            </div>
+
+        </div>
+    </section>
+
 </body>
