winter Essential section added

--- a/index.html
+++ b/index.html
@@ -167,4 +167,67 @@
         </div>
     </section>
 
+
+    <section>
+        <div class="card">
+
+            <div class="sub-row">
+                <div class="title-col">
+
+                    <h1>Winter Essentials</h1>
+                    <div class="view-button">
+                        <button>view all</button>
+                    </div>
+                    <div class="title-image">
+                        <img src="./images/winter.png" alt="mobile">
+                    </div>
+
+                </div>
+
+                <div class="common-row">
+
+
+
+                    <div class="common-col">
+                        <a href=""><img src="./images/caps.webp" alt=""></a>
+
+                        <h3>Caps</h3>
+                        <a href="">
+                            <h4>From<i class="fa-solid fa-indian-rupee-sign"></i>99</h4>
+                            <h6>caps</h6>
+                        </a>
+
+                    </div>
+                    <div class="common-col">
+                        <a href=""><img src="./images/bed.webp" alt=""></a>
+                        <h3>Blankets</h3>
+                        <a href="">
+                            <h4>From<i class="fa-solid fa-indian-rupee-sign"></i>799</h4>
+                            <h6>blankets,bedsheets</h6>
+                        </a>
+
+
+                    </div>
+                    <div class="common-col">
+                        <a href=""><img src="./images/jackets.webp" alt=""></a>
+
+                        <h3>Men's jackets</h3>
+                        <h4>From<i class="fa-solid fa-indian-rupee-sign"></i>999</h4>
+                        <h6>jackets</h6>
+                    </div>
+
+                    <div class="common-col">
+                        <a href=""><img src="./images/ho.webp" alt=""></a>
+
+                        <h3>MEn's Termals</h3>
+                        <h4>From<i class="fa-solid fa-indian-rupee-sign"></i>199</h4>
+                        <h6>hoddles</h6>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
+
 </body>
