--- a/index.html
+++ b/index.html
@@ -230,4 +230,59 @@
         </div>
     </section>
 
+
+    <section>
+        <div class="card">
+
+            <div class="sub-row">
+                <div class="title-col">
+
+                    <h1>New Year Specials</h1>
+                    <div class="view-button">
+                        <button>view all</button>
+                    </div>
+                    <div class="title-image">
+                        <img src="./images/newyear.png" alt="mobile">
+                    </div>
+
+                </div>
+
+                <div class="common-row">
+
+
+
+                    <div class="common-col">
+                        <a href=""><img src="./images/candils.webp" alt=""></a>
+
+                        <h3>Candles</h3>
+                        <h4>From<i class="fa-solid fa-indian-rupee-sign"></i>99</h4>
+                        <h6>candles</h6>
+                    </div>
+                    <div class="common-col">
+                        <a href=""><img src="./images/painting.webp" alt=""></a>
+
+                        <h3>Paintings</h3>
+                        <h4>From<i class="fa-solid fa-indian-rupee-sign"></i>299</h4>
+                        <h6>pictures,paintings</h6>
+                    </div>
+                    <div class="common-col">
+                        <a href=""><img src="./images/lights.webp" alt=""></a>
+
+                        <h3>Rice Lights</h3>
+                        <h4>From<i class="fa-solid fa-indian-rupee-sign"></i>199</h4>
+                        <h6>lights</h6>
+                    </div>
+                    <div class="common-col">
+                        <a href=""><img src="./images/bottle.webp" alt=""></a>
+                        <h3>Showpieces</h3>
+                        <h4>From<i class="fa-solid fa-indian-rupee-sign"></i>199</h4>
+                        <h6>figurines</h6>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
+
 </body>
