Fashion top deals section added

--- a/index.html
+++ b/index.html
@@ -285,4 +285,58 @@
         </div>
     </section>
 
+    <section>
+        <div class="card">
+
+            <div class="sub-row">
+                <div class="title-col">
+
+                    <h1>Fashion Top Deals</h1>
+                    <div class="view-button">
+                        <button>view all</button>
+                    </div>
+                    <div class="title-image">
+                        <img src="./images/top fashion.png" alt="mobile">
+                    </div>
+
+                </div>
+
+                <div class="common-row">
+
+
+
+                    <div class="common-col">
+                        <a href=""><img src="./images/fashion1.webp" alt=""></a>
+
+                        <h3>Shoes</h3>
+                        <h4>From<i class="fa-solid fa-indian-rupee-sign"></i>2999</h4>
+                        <h6>men's sneakers</h6>
+                    </div>
+                    <div class="common-col">
+                        <a href=""><img src="./images/wallet.webp" alt=""></a>
+                        <h3>Allen Solly,Lavie</h3>
+                        <h4>From<i class="fa-solid fa-indian-rupee-sign"></i>999</h4>
+                        <h6>bags</h6>
+                    </div>
+                    <div class="common-col">
+                        <a href=""><img src="./images/cloths.webp" alt=""></a>
+
+                        <h3>kids clothing</h3>
+                        <h4>From<i class="fa-solid fa-indian-rupee-sign"></i>999</h4>
+                        <h6>cloths</h6>
+                    </div>
+                    <div class="common-col">
+                        <a href=""><img src="./images/churidhar.webp" alt=""></a>
+
+                        <h3>Gwons</h3>
+                        <h4>From<i class="fa-solid fa-indian-rupee-sign"></i>699</h4>
+                        <h6>gwons</h6>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
+
 </body>
