top deals section added

--- a/index.html
+++ b/index.html
@@ -339,4 +339,60 @@
         </div>
     </section>
 
+
+    <section>
+        <div class="card">
+
+            <div class="sub-row">
+                <div class="title-col">
+
+                    <h1>TOP DEALS</h1>
+                    <div class="view-button">
+                        <button>view all</button>
+                    </div>
+                    <div class="title-image">
+                        <img src="./images/titlecard.png" alt="mobile">
+                    </div>
+
+                </div>
+
+                <div class="common-row">
+
+
+
+                    <div class="common-col">
+                        <a href=""><img src="./images/tab.webp" alt=""></a>
+
+                        <h3>Lenovo Tab M8</h3>
+                        <h4>From<i class="fa-solid fa-indian-rupee-sign"></i>1,999</h4>
+                        <h6>lenovo</h6>
+                    </div>
+                    <div class="common-col">
+                        <a href=""><img src="./images/charge.webp" alt=""></a>
+
+                        <h3>Charger</h3>
+                        <h4>From<i class="fa-solid fa-indian-rupee-sign"></i>299</h4>
+                        <h6>chargers,cables</h6>
+                    </div>
+                    <div class="common-col">
+                        <a href=""><img src="./images/ipad.webp" alt=""></a>
+
+                        <h3>Applle ipad</h3>
+                        <h4>From<i class="fa-solid fa-indian-rupee-sign"></i>49999</h4>
+                        <h6>apple</h6>
+                    </div>
+                    <div class="common-col">
+                        <a href=""><img src="./images/lense.webp" alt=""></a>
+
+                        <h3>Camera lense</h3>
+                        <h4>From<i class="fa-solid fa-indian-rupee-sign"></i>199</h4>
+                        <h6>camera lense protector</h6>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
+
 </body>
