row-1 footer  added

--- a/index.html
+++ b/index.html
@@ -395,4 +395,99 @@
         </div>
     </section>
 
+    <footer>
+        <div class="footer-row1">
+            <div class="left-footer">
+                <div class="about">
+
+                    <ul>ABOUT</ul>
+                    <li><a href="">Contact Us</a> </li>
+                    <li><a href=""> Careers</a></li>
+                    <li><a href="">Flipkart Stories</a></li>
+                    <li><a href="">Press</a></li>
+                    <li><a href="">Flipkart</a></li>
+                    <li><a href="">Wholesale</a></li>
+                    <li><a href="">Corporate</a></li>
+                    <li><a href="">Information</a></li>
+
+
+
+
+                </div>
+
+
+
+                <div class="help">
+                    <ul>HELP</ul>
+                    <li><a href="">Payments</a></li>
+                    <li><a href="">Shipping</a></li>
+                    <li><a href="">cancellation</a></li>
+                    <li><a href="">Returns</a></li>
+                    <li><a href="">FAQ</a></li>
+                    <li><a href="">Report</a></li>
+                    <li><a href="">infringement</a></li>
+
+
+
+                </div>
+                <div class="policy">
+                    <ul>POLICY</ul>
+                    <li><a href="">Return Policy</a></li>
+                    <li><a href="">Terms Of Use</a></li>
+                    <li><a href="">Security</a></li>
+                    <li><a href="">Privacy</a></li>
+                    <li><a href="">sitemap</a></li>
+                    <li><a href="">EPR COmpliance</a></li>
+
+
+
+                </div>
+
+                <div class="socail">
+                    <ul>SOCIAL</ul>
+                    <li><a href="">Facebook</a></li>
+                    <li><a href="">TWitter</a></li>
+                    <li><a href="">Youtube</a></li>
+                    <li><a href=""></a></li>
+
+                </div>
+            </div>
+            <div class="right-footer">
+                <div class="line">
+
+                </div>
+                <div class="mail-us">
+                    <ul>Mail us:</ul>
+                    <li>Flipkart Internet Private Limited,<br>
+                        Buildings Alyssa, Begonia & <br>
+                        Clove Embassy Tech Village, <br>
+                        Outer Ring Road, Devarabeesanahalli Village,<br>
+                        Bengaluru, 560103, <br>
+                        Karnataka, India</li>
+                </div>
+
+                <div class="register">
+
+                    <ul>Registered Office Address:</ul>
+                    <li>Flipkart Internet Private Limited,<br>
+
+                        Buildings Alyssa, Begonia &b <br>
+
+                        Clove Embassy Tech Village, <br>
+
+                        Outer Ring Road, Devarabeesanahalli Village, <br>
+
+                        Bengaluru, 560103,<br>
+
+                        Karnataka, India <br>
+
+                        CIN : U51109KA2012PTC066107 <br>
+
+                        Telephone: <a href=""> 044-45614700</a></li>
+                </div>
+
+            </div>
+        </div>
+    </footer>
+
 </body>
