row-2 footer  added

--- a/index.html
+++ b/index.html
@@ -488,6 +488,33 @@
 
             </div>
         </div>
+
+
+        <div class="footer-row2">
+            <div class="row2-left">
+                <span> <img src="./images/become.svg" alt=""> <a href="">
+                        <h6>Become a Seller</h6>
+                    </a></span>
+                <span><img src="./images/add.svg" alt=""> <a href="">
+                        <h6>Advertise</h6>
+                    </a> </span>
+                <span><img src="./images/gift.svg" alt=""> <a href="">
+                        <h6>Gift Cards </h6>
+                    </a></span>
+                <span><img src="./images/help.svg" alt=""> <a href="">
+                        <h6>Help Center</h6>
+                    </a> </span>
+                <h6>© 2007-2022 Flipkart.com</h6>
+
+            </div>
+
+
+            <div class="row2-right">
+                <img src="./images/cards.svg" alt="">
+            </div>
+
+
+        </div>
     </footer>
 
 </body>
